--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "date-fns": "^4.1.0",
+    "html2pdf.js": "^0.12.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
